--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primeteam-app",
+  "name": "fantasy-medium",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -14,21 +14,25 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/material-top-tabs": "^6.6.13",
-    "expo": "~50.0.14",
-    "expo-constants": "~15.4.5",
+    "date-fns": "^3.6.0",
+    "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
+    "expo-router": "~3.4.9",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-pager-view": "6.2.3"
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
