--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.17",
+    "expo": "50.0.19",
     "expo-constants": "~15.4.6",
     "expo-device": "~5.9.4",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-notifications": "~0.27.7",
+    "expo-notifications": "0.27.7",
     "expo-router": "3.4.10",
     "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
+    "expo-updates": "0.24.13",
     "firebase": "^10.11.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "@react-native-picker/picker": "2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
