--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "date-fns": "^3.6.0",
     "expo": "50.0.19",
@@ -22,7 +23,7 @@
     "expo-device": "~5.9.4",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-notifications": "0.27.7",
+    "expo-notifications": "0.27.8",
     "expo-router": "3.4.10",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "0.24.13",
@@ -35,8 +36,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2",
-    "@react-native-picker/picker": "2.6.1"
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
