--- a/eas.json
+++ b/eas.json
@@ -49,7 +49,7 @@
         "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "fantasy-medium-admin.appspot.com",
         "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "654024006669",
         "EXPO_PUBLIC_FIREBASE_APP_ID": "1:654024006669:web:637680911a24019e4f8944",
-        "EXPO_PUBLIC_WHATSAPP_LINK": "https://api.whatsapp.com/send/?phone=%2B919786420437&text=Hi+FantasyMedium+Support&app_absent=0&lang=en"
+        "EXPO_PUBLIC_WHATSAPP_LINK": "https://bit.ly/3W7OFzX"
       }
     }
   },
