--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
         "backgroundColor": "#1e1e1e"
       },
       "package": "com.gokhulb23.fantasymedium",
+      "googleServicesFile": "./google-services.json",
       "permissions": ["INTERNET"]
     },
     "web": {
