--- a/package.json
+++ b/package.json
@@ -14,29 +14,32 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-picker/picker": "2.6.1",
-    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^15.1.2",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/material-top-tabs": "^7.0.7",
     "date-fns": "^3.6.0",
-    "expo": "50.0.19",
-    "expo-constants": "~15.4.6",
-    "expo-device": "~5.9.4",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-notifications": "0.27.8",
-    "expo-router": "3.4.10",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "0.24.13",
+    "expo": "^52.0.11",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-notifications": "^0.29.8",
+    "expo-router": "^4.0.9",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.9",
     "firebase": "^10.11.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.3",
     "react-native-animatable": "^1.4.0",
-    "react-native-pager-view": "6.2.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-pager-view": "6.5.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
