--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+google-services.json
 
 # dependencies
 node_modules/
